--- a/TessAI/requirements.txt
+++ b/TessAI/requirements.txt
@@ -6,12 +6,14 @@ anyio==4.9.0
 asgiref==3.8.1
 async-timeout==4.0.3
 attrs==25.3.0
+audioread==3.0.1
 backoff==2.2.1
 bcrypt==4.3.0
 beautifulsoup4==4.13.4
 build==1.2.2.post1
 cachetools==5.5.2
 certifi==2025.1.31
+cffi==1.17.1
 charset-normalizer==3.4.1
 chroma-hnswlib==0.7.6
 chromadb==0.6.3
@@ -19,6 +21,7 @@ click==8.1.8
 click-default-group==1.2.4
 coloredlogs==15.0.1
 dataclasses-json==0.6.7
+decorator==5.2.1
 Deprecated==1.2.18
 distro==1.9.0
 durationpy==0.9
@@ -43,10 +46,12 @@ idna==3.10
 importlib_metadata==8.6.1
 importlib_resources==6.5.2
 Jinja2==3.1.6
+joblib==1.4.2
 jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
+keyboard==0.13.5
 kubernetes==32.0.1
 langchain==0.3.23
 langchain-chroma==0.2.3
@@ -55,6 +60,9 @@ langchain-core==0.3.52
 langchain-ollama==0.3.2
 langchain-text-splitters==0.3.8
 langsmith==0.3.31
+lazy_loader==0.4
+librosa==0.11.0
+llvmlite==0.44.0
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 marshmallow==3.26.1
@@ -62,9 +70,11 @@ mdurl==0.1.2
 mmh3==5.1.0
 monotonic==1.6
 mpmath==1.3.0
+msgpack==1.1.0
 multidict==6.4.3
 mypy-extensions==1.0.0
 networkx==3.4.2
+numba==0.61.2
 numpy==2.2.4
 oauthlib==3.2.2
 ollama==0.4.7
@@ -82,13 +92,17 @@ opentelemetry-util-http==0.53b1
 orjson==3.10.16
 overrides==7.7.0
 packaging==24.2
+platformdirs==4.3.7
 playwright==1.51.0
 pluggy==1.5.0
+pooch==1.8.2
 posthog==3.25.0
 propcache==0.3.1
 protobuf==5.29.4
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
+# PyAudio==0.2.14
+pycparser==2.22
 pydantic==2.11.3
 pydantic-settings==2.8.1
 pydantic_core==2.33.1
@@ -98,20 +112,28 @@ PyPika==0.48.9
 pyproject_hooks==1.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
+pyttsx3==2.98
 PyYAML==6.0.2
 referencing==0.36.2
 regex==2024.11.6
 requests==2.32.3
 requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
+Resemblyzer==0.1.4
 rich==14.0.0
 rpds-py==0.24.0
 rsa==4.9.1
 safetensors==0.5.3
+scikit-learn==1.6.1
+scipy==1.15.2
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
+sounddevice==0.5.1
+soundfile==0.13.1
 soupsieve==2.6
+soxr==0.5.0.post1
+SpeechRecognition==3.14.2
 SQLAlchemy==2.0.40
 sqlite-fts4==1.0.3
 sqlite-utils==3.38
@@ -119,12 +141,14 @@ starlette==0.45.3
 sympy==1.13.1
 tabulate==0.9.0
 tenacity==9.1.2
+threadpoolctl==3.6.0
 tokenizers==0.21.1
 tomli==2.2.1
 torch==2.6.0
 tqdm==4.67.1
 transformers==4.51.3
 typer==0.15.2
+typing==3.7.4.3
 typing-inspect==0.9.0
 typing-inspection==0.4.0
 typing_extensions==4.13.2
@@ -132,6 +156,7 @@ urllib3==2.4.0
 uvicorn==0.34.1
 uvloop==0.21.0
 watchfiles==1.0.5
+# webrtcvad==2.0.10
 websocket-client==1.8.0
 websockets==15.0.1
 wrapt==1.17.2
